package labb.model;

public interface Storage {


    void addCar(Car c);

    //void setCarsPosition(Point2D.Double point);


}
