@startuml

title __DIT953-LAB1's Class Diagram__\n

  namespace  {
    abstract class Car {
    }
  }
  

  namespace  {
    class CarController {
    }
  }
  

  namespace  {
    class CarTruck {
    }
  }
  

  namespace  {
    class CarView {
    }
  }
  

  namespace  {
    class DrawPanel {
    }
  }
  

  namespace  {
    interface Movable {
    }
  }
  

  namespace  {
    class Saab95 {
    }
  }
  

  namespace  {
    class Scania {
    }
  }
  

  namespace  {
    interface Storage {
    }
  }
  

  namespace  {
    abstract class Transport {
    }
  }
  

  namespace  {
    abstract class Truck {
    }
  }
  

  namespace  {
    class Volvo240 {
    }
  }
  

  namespace  {
    class Workshop {
    }
  }
  

  Car -up-|> Transport
  CarController o-- CarView : frame
  CarTruck .up.|> Storage
  CarTruck -up-|> Truck
  CarView -up-|> javax.swing.JFrame
  CarView o-- CarController : carC
  CarView o-- DrawPanel : drawPanel
  DrawPanel -up-|> javax.swing.JPanel
  Saab95 -up-|> Car
  Scania -up-|> Truck
  Transport .up.|> Movable
  Transport o-- Truck.StateEngine : state
  Transport o-- Workshop.typeOfCar : type
  Truck -up-|> Transport
  Truck o-- Truck.StateRamp : stateRamp
  Volvo240 -up-|> Car
  Workshop .up.|> Storage
  Workshop o-- Workshop.typeOfCar : carType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
